<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name_release" translatable="false" tools:ignore="UnusedResources">Tantzers</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">Tantzers Debug</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="loading">Loading…</string>
    <string name="btn_cancel">Cancel</string>
    <string name="byletter_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pref_playback">Playback</string>
    <string name="pref_max_bitrate_title">Max streaming bitrate</string>
    <string name="pref_max_resolution_title">Max video resolution</string>
    <string name="pref_max_resolution_description">Videos exceeding this resolution will be transcoded. Useful for devices that cannot play 4K content.</string>
    <string name="max_resolution_auto">Auto (device capability)</string>
    <string name="max_resolution_480p">480p (SD)</string>
    <string name="max_resolution_720p">720p (HD)</string>
    <string name="max_resolution_1080p">1080p (Full HD)</string>
    <string name="max_resolution_2160p">2160p (4K UHD)</string>
    <string name="settings_title">Preferences</string>
    <string name="pref_authentication_cat">Authentication</string>
    <string name="chapters">Chapters</string>
    <string name="state_disabled">Disabled</string>
    <string name="lbl_settings">Preferences</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_continue_watching">Continue watching</string>
    <string name="continue_listening">Continue listening</string>
    <string name="lbl_next_up">Next up</string>
    <string name="lbl_on_now">On now</string>
    <string name="lbl_views">Views</string>
    <string name="lbl_by_letter">By letter</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_status">%1$s / %2$s</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_search">Search</string>
    <string name="msg_not_implemented">" not implemented"</string>
    <string name="lbl_latest">Recently added</string>
    <string name="lbl_latest_in">Recently added in %1$s</string>
    <string name="lbl_by_name">By name</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_coming_up">Coming up</string>
    <string name="lbl_favorite_channels">Favorite channels</string>
    <string name="lbl_other_channels">Other channels</string>
    <string name="lbl_collections">Collections</string>
    <string name="lbl_items_in_collection">Items in Collection</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_tv_series">TV series</string>
    <string name="lbl_other">Other</string>
    <string name="because_you_watched">Because you watched %1$s</string>
    <string name="lbl_play_all">Play all</string>
    <string name="lbl_shuffle_all">Shuffle all</string>
    <string name="shuffle_no_items_found">No items found to shuffle</string>
    <string name="shuffle_error">Failed to shuffle. Please try again.</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_pause">Pause</string>
    <string name="lbl_restart">Restart</string>
    <string name="lbl_exit">Exit</string>
    <string name="exit_confirmation_title">Exit Tantzers?</string>
    <string name="exit_confirmation_message">Are you sure you want to exit the app?</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_cancel_recording">Cancel recording</string>
    <string name="lbl_cancel_series">Cancel series</string>
    <string name="lbl_record_series">Record series</string>
    <string name="lbl_record">Record</string>
    <string name="msg_set_to_record">Program set to record</string>
    <string name="msg_unable_to_create_recording">Unable to create recording</string>
    <string name="msg_recording_cancelled">Recording cancelled</string>
    <string name="msg_unable_to_cancel">Unable to cancel recording</string>
    <string name="lbl_cast_crew">Cast &amp; crew</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_additional_parts">Additional parts</string>
    <string name="lbl_chapters">Chapters</string>
    <string name="lbl_specials">Specials</string>
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_series">Series</string>
    <string name="lbl_seasons">Seasons</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_watched">Watched</string>
    <string name="lbl_sd">SD</string>
    <string name="lbl_runs">"Runs"</string>
    <string name="runtime_hours_minutes">%1$dh %2$dm</string>
    <string name="runtime_minutes">%1$dm</string>
    <string name="lbl_ends">"Ends"</string>
    <string name="lbl_directed_by">"Directed by"</string>
    <string name="lbl_directors">Directors</string>
    <string name="lbl_writers">"Writers"</string>
    <string name="lbl_studios">Studios</string>
    <string name="lbl_last_played">"Last played "</string>
    <string name="lbl_runtime">Runtime</string>
    <string name="lbl_other_options">Other options</string>
    <string name="lbl_people">People</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_recordings">Recordings</string>
    <string name="lbl_none">None</string>
    <string name="msg_video_playback_error">"Video playback error - "</string>
    <string name="lbl_bracket_unknown">Unknown</string>
    <string name="lbl_trailer">"Trailer "</string>
    <string name="lbl_play_trailers">Play trailer(s)</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_enter_server_address">Enter server address</string>
    <string name="lbl_valid_server_address">Please enter the server address (IP or domain/machine name)</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_born">"Born "</string>
    <string name="lbl_loading_elipses">Loading…</string>
    <string name="msg_playback_not_allowed">Playback not allowed at this time</string>
    <string name="msg_playback_restricted">The administrator has restricted playback of this item at this time</string>
    <string name="msg_playback_incompatible">Cannot play this video format</string>
    <string name="lbl_never">Never</string>
    <string name="msg_cannot_play_time">Cannot play this item at this time</string>
    <string name="msg_cannot_play">This item cannot be played</string>
    <string name="lbl_no_items">No items</string>
    <string name="lbl_empty">Empty</string>
    <string name="lbl_tv_queuing">Play next episode automatically</string>
    <string name="lbl_search_hint">Search text (select for keyboard)</string>
    <string name="lbl_play_first_unwatched">Play first unwatched</string>
    <string name="lbl_mark_unplayed">Mark unplayed</string>
    <string name="lbl_mark_played">Mark played</string>
    <string name="lbl_remove_favorite">Remove favorite</string>
    <string name="lbl_add_favorite">Add favorite</string>
    <string name="lbl_now_playing_track">%1$s of %2$s</string>
    <string name="lbl_now_playing_album">from %1$s</string>
    <string name="msg_no_playable_items">No playable items</string>
    <string name="lbl_unwatched">Unwatched</string>
    <string name="lbl_load_channels">"Load channels "</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_tomorrow">Tomorrow</string>
    <string name="lbl_on">On </string>
    <string name="lbl_tune_to_channel">Tune to channel</string>
    <string name="msg_recording_now">Recording now</string>
    <string name="msg_will_record">Will record</string>
    <string name="lbl_begin_padding">Begin padding</string>
    <string name="lbl_program_ended">Program ended</string>
    <string name="lbl_end_padding">End padding</string>
    <string name="lbl_similar_items_library">Similar items in your library</string>
    <string name="lbl_record_any_channel">Record on any channel</string>
    <string name="lbl_record_any_time">Record at any time</string>
    <string name="lbl_only_new_episodes">Only new episodes</string>
    <string name="lbl_repeat_options">Repeat options</string>
    <string name="msg_cancel_entire_series">Are you sure you want to cancel this ENTIRE SERIES?</string>
    <string name="pref_audio_direct">Direct</string>
    <string name="pref_audio_compat">Downmix to stereo</string>
    <string name="pref_audio_night_mode">Audio night mode (experimental)</string>
    <string name="lbl_audio_output">Audio output</string>
    <string name="lbl_goto_series">Go to series</string>
    <string name="lbl_enable_debug">Debug options</string>
    <string name="desc_debug">Provide extra information for debugging</string>
    <string name="lbl_showing">Showing</string>
    <string name="lbl_all_items">All items</string>
    <string name="lbl_sorted_by">sorted by</string>
    <string name="lbl_from">from</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_date_series_added">Date series added</string>
    <string name="lbl_date_episode_added">Date episode added</string>
    <string name="lbl_premier_date">Premier date</string>
    <string name="lbl_critic_rating">Critic rating</string>
    <string name="lbl_community_rating">Community rating</string>
    <string name="lbl_rating">Rating</string>
    <string name="lbl_starting_with">beginning with those whose name starts with</string>
    <string name="lbl_display_preferences">Display preferences</string>
    <string name="lbl__continuing"> CONTINUING </string>
    <string name="lbl__continuing_title">Continuing</string>
    <string name="lbl_ended"> ENDED </string>
    <string name="lbl_ended_title">Ended</string>
    <string name="lbl_filters">Live TV filters</string>
    <string name="msg_subtitles_loading">Subtitles loading…</string>
    <string name="msg_unable_load_subs">Unable to load subtitle</string>
    <string name="msg_burn_sub_warning">Burning in subtitles. This may take a few seconds…</string>
    <string name="lbl_no_recordings">No recordings available</string>
    <string name="lbl_live_tv_guide">Live TV guide</string>
    <string name="lbl_recorded_tv">Recorded TV</string>
    <string name="pref_live_tv_cat">Live TV</string>
    <string name="lbl_select_server">Select Server</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_sign_in">Please sign in</string>
    <string name="server_connecting">Connecting to %1$s</string>
    <string name="discovered_servers_title">Discovered servers</string>
    <string name="discovered_servers_empty">No servers found on local network.</string>
    <string name="connect_manually_by_address">Enter server address</string>
    <string name="saved_servers">Saved servers</string>
    <string name="welcome_title">Welcome to Tantzers!</string>
    <string name="welcome_content">Connect to your server to get started.</string>
    <string name="no_user_warning">We couldn\'t find any accounts!\nAdd a new account by pressing the \"Add account\" button.</string>
    <string name="who_is_watching">Who\'s watching?</string>
    <string name="add_user">Add account</string>
    <string name="lbl_edit">Edit</string>
    <string name="action_use_password">Use a password</string>
    <string name="action_use_quickconnect">Use Quick Connect</string>
    <string name="login_connect_to">Connecting to %1$s</string>
    <string name="action_connect">Connect</string>
    <string name="server_unsupported_notification">This server uses Jellyfin version %1$s which is unsupported. Please update to Jellyfin %2$s or newer to continue using the app.</string>
</resources>